--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 
-TgCrypto
-https://github.com/CW4RR10R/pyrogram/archive/asyncio.zip
-git+https://github.com/ytdl-org/youtube-dl
+pyrogram==2.0.106
+tgcrypto
+git+https://github.com/ytdl-org/youtube-dl.git
 wget
 pillow
 hachoir
